<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <Button
            android:id="@+id/btnQR"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/qr"
            android:textColor="@color/dark_white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnNFC"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/nfc"
            android:textColor="@color/dark_white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnMap"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/map"
            android:textColor="@color/dark_white"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="@color/dark_blue"
            android:text="@string/exit"
            android:textColor="@color/dark_white"
            android:textSize="24sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/dark_white"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>